Fix hero: align content to top, padding-top 100px for header clearance

--- a/css/hero.css
+++ b/css/hero.css
@@ -12,9 +12,10 @@
   background-color: #0a2a52;
   position: relative;
   z-index: 1;
-  padding: 50px 36px 48px 36px;
+  padding: 36px 36px 48px 36px;
+  padding-top: 100px;
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 .ek-hero__inner {
